--- a/assets/src/style/style.less
+++ b/assets/src/style/style.less
@@ -222,6 +222,8 @@ main{
 
     .testimonials-block__slider{
       width: 100%;
+      max-width: 1430px;
+      overflow: hidden;
       .testimonials-block__slider__list{
         .testimonials-block__slider__comment {
           background: #fff;
